    + Do not remove the destination directory when --force is given.  (Closes:
      #587517)
  * Remove --ignore-dirname options (and deprecation notices) from all
    scripts.  6.5 years is long enough to stop using that option.
  * diff2patches: Document the patch naming scheme and use of “debian/” as the
    destination directory when “debian/patches/” doesn't exist.  (Closes:
    #552693)

  [ Martin Zobel-Helas ]
  * Remove svk from Recommends, it is no longer in the archive. (Closes:
    #581224)

  [ Raphael Geissert ]
  * checkbashisms:
    + Makefile handling:
      - Simplify make variables as shell variables.  (Closes: #535368)
      - Convert all $$ to $.
      - Recognize SHELL setting in Makefile when being set as an override.
      - Ignore make's '-' for ignore errors.
      - Fix some false positives due to target names.
    + Detect incorrect use of ^ instead of ! for negation in pattern matching
      collections.  (Closes: #497489)
    + Detect use of {post,pre}{increment,decrement} in arithmetic expansion.
      (Closes: #572006)
    + Detect use of Bash's “printf -v var ...” or the %b and %q format
      specifiers.
    + Detect use of the Bash's “coproc” keyword.
    + Detect use of Bash's “;;&” and ”;&” operators.
    + Add support for handling line continuations.  (Closes: #531327)
    + Fix a false positive with file redirection.
    + Fix handling of indented heredoc delimiters.
    + Fix some parsing of quoted strings.
    + Detect use of exponentiation.
    + Detect use of the 'jobs' built-in.
    + Detect use of command with options other than “-p”.
    + Fix a false positive with redirection to an fd specified via a variable.
    + Detect unexpected EOF for unclosed heredocs, quoted strings, and line
      continuations.

  [ Simon McVittie ]
  * mk-build-deps:
    + Build an Arch: any package if any of the Build-Depends have architecture
      requirements.  (Closes: #580600)